compiler/fir/analysis-tests/testData/resolveWithStdlib/properties/explicitBackingFieldUnsupported.kt
// RUN_PIPELINE_TILL: FRONTEND
// LANGUAGE: -ExplicitBackingFields

val that: Number
    <!UNSUPPORTED_FEATURE!>field = 4<!>
